# label-ai

./: .pre-commit-config.yaml  justfile  pyproject.toml
.claude/agents/: code-searcher.md
.claude/commands/: commit.md
docs/: claude-slash-commands.md
examples/news_classifier/: labeler.py
src/labelai/: __init__.py  architecture.py  configs.py  cost.py  datasets.py  embeddings.py  example.py  labeler.py  main.py  prompt.py
src/labelai/examples/: cost_example.py  document_classifier_example.py  label_example.py
tasks/: commit.just  format.just
