[project]
name = "labelai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "anthropic>=0.62.0",
    "cyclopts>=3.22.5",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "kagglehub>=0.3.12",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "openai>=1.99.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "uvloop>=0.21.0",
]

[project.scripts]
labelai = "labelai.cli:execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
checks = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]
commit = [
    "commitizen>=4.7.2",
    "pre-commit>=4.2.0",
    "prek>=0.2.1",
]
dev = [
    "rust-just>=1.40.0",
]
doc = [
    "pdoc>=15.0.3",
]
notebooks = [
    "ipykernel>=6.30.0",
]

# TOOLS

[tool.uv]
default-groups = ["checks", "commit", "dev", "doc"]

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_schema = "pep440"
version_provider = "pep621"
changelog_start_rev = "v0.1.0"
update_changelog_on_bump = true

[tool.mypy]
pretty = true
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
